# zetta

./: Cargo.toml  Readme.md
src/: main.rs  prediction-prompt.md  prediction-prompt2.md  prompts.rs
