[package]
name = "zetta"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
ollama-rs = { version = "0.2.5", features = ["stream"] }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
